Use regular font weight for facet and reduce the text by 2 chars to avoid line overflows

--- a/portal-web/trunk/src/main/webapp/less/articles.less
+++ b/portal-web/trunk/src/main/webapp/less/articles.less
@@ -420,7 +420,6 @@ For example <article class="featured"> to build a featured data use article
           font-size: 12px !important;
           margin-top: 4px !important;
           margin-bottom: 4px !important;
-          font-weight: lighter !important;
         }
 
         ul li {
